bug 321932 r=bz sr=darin Better handle the case where channels don't implement isPending correctly